Rota post inicio

--- a/aula04/at12-RenderizarHTML/views/cadastrar.html
+++ b/aula04/at12-RenderizarHTML/views/cadastrar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <form action="">
+        <form action="/cadastrar/login" method="post">
             <h2>Cadastrar Login</h2>
             <div class="form-grid">
                 <div>
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <label for="confirmar">Confirmar senha</label>
-                    <input type="text" name="confirmar" id="confirmar">
+                    <input type="password" name="confirmar" id="confirmar">
                 </div>
             </div>
             <input class="btn-cadastrar" type="submit" value="Cadastrar">
