--- a/aula05/at13-AcessoBancoDados/views/cadastrar.html
+++ b/aula05/at13-AcessoBancoDados/views/cadastrar.html
@@ -2,14 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="css/style.css">
-    <title>Cadastrar - Login</title>
+    <title>Cadastrar Login</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="container">
-        <form action="/cadastrar/login" method="post">
+    <div id="container">        
+        <form id="form-login">
             <h2>Cadastrar Login</h2>
             <div class="form-grid">
                 <div>
@@ -25,14 +24,15 @@
                     <input type="password" name="senha" id="senha">
                 </div>
                 <div>
-                    <label for="confirmar">Confirmar senha</label>
+                    <label for="confirmar">Confirmar Senha</label>
                     <input type="password" name="confirmar" id="confirmar">
                 </div>
             </div>
-            <input class="btn-cadastrar" type="submit" value="Cadastrar">
+            <input class="btn-cadastrar" onclick="cadastrarLogin()" type="button" value="Cadastrar">
         </form>
     </div>
-    
+    <script src="js/jquery-3.6.1.min.js"></script>
+    <script src="js/sweetalert2@11.js"></script>
     <script src="js/cadastrar.js"></script>
 </body>
 </html>
