--- a/aula07/at15-CrudSequelizePetShop/views/cadastrar-usuarios.html
+++ b/aula07/at15-CrudSequelizePetShop/views/cadastrar-usuarios.html
@@ -29,8 +29,8 @@
                             <input type="password" class="form-control" id="senha" name="senha">
                         </div>
                         <div class="col-md-6">
-                            <label for="Confirmar" class="form-label">Confirmar senha</label>
-                            <input type="password" class="form-control" id="Confirmar" name="Confirmar">
+                            <label for="confirmar" class="form-label">Confirmar senha</label>
+                            <input type="password" class="form-control" id="confirmar" name="confirmar">
                         </div>
                     </div>
                     <div class="mt-3">
@@ -42,6 +42,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script-cadastrar.js"></script>
 </body>
 </html>
